--- a/pod/perlhist.pod
+++ b/pod/perlhist.pod
@@ -696,6 +696,7 @@ the strings?).
  Sawyer X  5.32.0       2020-Jun-20
 
  Sawyer X  5.33.0       2020-Jul-17     The 5.33 development track
+ Ether     5.33.1       2020-Aug-20
 
 =head2 SELECTED RELEASE SIZES
 
