--- a/pod/perlcall.pod
+++ b/pod/perlcall.pod
@@ -121,6 +121,8 @@ been warned.
 
 =head1 FLAG VALUES
 
+=for apidoc_section Callback Functions
+
 The C<flags> parameter in all the I<call_*> functions is one of G_VOID,
 G_SCALAR, or G_ARRAY, which indicate the call context, OR'ed together
 with a bit mask of any combination of the other G_* symbols defined below.
@@ -993,6 +995,7 @@ equivalent of C<$@>.  We use a local temporary, C<err_tmp>, since
 C<ERRSV> is a macro that calls a function, and C<SvTRUE(ERRSV)> would
 end up calling that function multiple times.
 
+=for apidoc_section Callback Functions
 =for apidoc Amnh|GV *|PL_errgv
 
 =item 3.
