--- a/pod/perlmroapi.pod
+++ b/pod/perlmroapi.pod
@@ -79,6 +79,7 @@ stash, and a pointer to your C<mro_alg> structure:
     meta = HvMROMETA(stash);
     private_sv = MRO_GET_PRIVATE_DATA(meta, &my_mro_alg);
 
+=for apidoc_section MRO
 =for apidoc mro_get_private_data
 
 To set your private value, call C<Perl_mro_set_private_data()>:
