not only system and library calls can set errno
Unfortunately I don't remember the ticket, but I remember one
complaining that code like C<print $fh "..."> would set $!
when $fh wasn't an open filehandle, so cover that case here too.

--- a/pod/perlvar.pod
+++ b/pod/perlvar.pod
@@ -1927,6 +1927,9 @@ It can be used immediately before invoking the C<die()> operator,
 to set the exit value, or to inspect the system error string
 corresponding to error I<n>, or to restore C<$!> to a meaningful state.
 
+Perl itself may set C<errno> to a non-zero on failure even if no
+system call is performed.
+
 Mnemonic: What just went bang?
 
 =item %OS_ERROR
