--- a/pod/perlcall.pod
+++ b/pod/perlcall.pod
@@ -123,8 +123,8 @@ been warned.
 
 =for apidoc_section Callback Functions
 
-The C<flags> parameter in all the I<call_*> functions is one of G_VOID,
-G_SCALAR, or G_ARRAY, which indicate the call context, OR'ed together
+The C<flags> parameter in all the I<call_*> functions is one of C<G_VOID>,
+C<G_SCALAR>, or C<G_ARRAY>, which indicate the call context, OR'ed together
 with a bit mask of any combination of the other G_* symbols defined below.
 
 =head2  G_VOID
