--- a/pod/perlfunc.pod
+++ b/pod/perlfunc.pod
@@ -7863,7 +7863,7 @@ produces the output C<abc>, and this:
 
     print join(':', split(//, 'abc', 2)), "\n";
 
-produces the output C<a:bc>, and each of these:
+produces the output C<a:bc>, and this:
 
     print join(':', split(//, 'abc', 3)), "\n";
 
