--- a/AUTHORS
+++ b/AUTHORS
@@ -955,6 +955,7 @@ Olivier Mengué                 <dolmen@cpan.org>
 Olivier Thauvin                <olivier.thauvin@aerov.jussieu.fr>
 Olli Savia
 Ollivier Robert                <roberto@keltia.freenix.fr>
+oodler                         <oodler@cpan.org>
 Osvaldo Villalon               <ovillalon@dextratech.com>
 Owain G. Ainsworth             <oga@nicotinebsd.org>
 Owen Taylor                    <owt1@cornell.edu>
