perldsc: eliminate unnecessary call to keys()
A hash in scalar context now evalutes to its key count, meaning that
(%h1 <=> %h2) is equivalent to, but shorter than, (keys %h1 <=> keys
%h2).  I have dropped calls to keys() in this code to make it clearer.

(This commit may be controversial, as in some places scalar(@arr) is
being used with the suggestion that it provides values.)

--- a/pod/perldsc.pod
+++ b/pod/perldsc.pod
@@ -666,9 +666,7 @@ X<hash of hashes> X<HoH>
 
 
  # print the whole thing sorted by number of members
- foreach $family ( sort { keys %{$HoH{$b}} <=> keys %{$HoH{$a}} }
-                                                             keys %HoH )
- {
+ foreach $family ( sort { $HoH{$b}->%* <=> $HoH{$a}->%* } keys %HoH ) {
      print "$family: { ";
      for $role ( sort keys $HoH{$family}->%* ) {
          print "$role=$HoH{$family}{$role} ";
@@ -681,9 +679,7 @@ X<hash of hashes> X<HoH>
  for ( qw(lead wife son daughter pal pet) ) { $rank{$_} = ++$i }
 
  # now print the whole thing sorted by number of members
- foreach $family ( sort { keys %{ $HoH{$b} } <=> keys %{ $HoH{$a} } }
-                                                             keys %HoH )
- {
+ foreach $family ( sort { $HoH{$b}->%* <=> $HoH{$a}->%* } keys %HoH ) {
      print "$family: { ";
      # and print these according to rank order
      for $role ( sort { $rank{$a} <=> $rank{$b} }
