perldesc: replace circumfix with postfix dereference
...and what an odd one, this!

--- a/pod/perldsc.pod
+++ b/pod/perldsc.pod
@@ -711,7 +711,7 @@ many different sorts:
      print $rec->{TEXT};
 
      print $rec->{SEQUENCE}[0];
-     $last = pop @ { $rec->{SEQUENCE} };
+     $last = pop $rec->{SEQUENCE}->@*;
 
      print $rec->{LOOKUP}{"key"};
      ($first_k, $first_v) = each $rec->{LOOKUP}->%*;
